Extracted strings from profile screen Handled image compression crash

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -781,4 +781,29 @@
     <string name="take_photo">Take Photo</string>
     <string name="choose_from_gallery">Choose from Gallery</string>
     <string name="alert_message_txt">Alert Message</string>
+    <string name="covid_history">Covid History</string>
+    <string name="stay_type">Stay Type</string>
+    <string name="icu">ICU</string>
+    <string name="oxygen_therapy">Oxygen Therapy</string>
+    <string name="ventilator">Ventilator</string>
+    <string name="without_oxygen_therapy">Without Oxygen Therapy</string>
+    <string name="past_history">Past History</string>
+    <string name="do_you_have_any_medical_conditions_before_covid">Do you have any medical conditions before COVID?</string>
+    <string name="diabetes">Diabetes</string>
+    <string name="hypertension">Hypertension</string>
+    <string name="heart_diseases">Heart diseases</string>b
+    <string name="cancer">Cancer</string>
+    <string name="asthma">Asthma</string>
+    <string name="kidney_disorder">Kidney disorder</string>
+    <string name="others">Others</string>
+    <string name="are_you_taking_medication_for_any_of_these_medical_condition_if_yes_please_upload_prescription_in_upload_document_section">Are you taking medication for any of these medical condition (If Yes please upload prescription in Upload Document Section)</string>
+    <string name="do_you_have_family_history_of_any_disease">Do you have family history of any disease?</string>
+    <string name="do_you_have_any_allergies">Do You have any allergies?</string>
+    <string name="do_you_consume_alcohol">Do You consume Alcohol?</string>
+    <string name="do_you_consume_tobacco_smoke">Do you consume tobacco Smoke?</string>
+    <string name="post_covid_care">Post COVID Care</string>
+    <string name="are_you_consulting_any_doctor_for_post_covid_care">Are you consulting any doctor for Post COVID Care?</string>
+    <string name="if_yes_please_mention_the_complaint">If yes, please mention the complaint</string>
+    <string name="complaint">Complaint</string>
+    <string name="if_you_have_conducted_any_post_covid_investigation_or_taking_any_post_covid_medicine_please_upload_in_upload">If you have conducted any post COVID investigation or taking any post COVID medicine please upload in Upload</string>
 </resources>
