--- a/app/src/main/res/values-hi-rIN/strings.xml
+++ b/app/src/main/res/values-hi-rIN/strings.xml
@@ -843,4 +843,12 @@
     <string name = "if_yes_please_mention_the_complaint">यदि हाँ, तो कृपया शिकायत का उल्लेख करें</string>
     <string name = "complaint">शिकायत</string>
     <string name="if_you_have_conducted_any_post_covid_investigation_or_taking_any_post_covid_medicine_please_upload_in_upload">अगर आपने कोई COVID जांच की है या कोई पोस्ट COVID दवा ली है तो कृपया अपलोड में अपलोड करें</string>
+    <string name="take_photo">फोटो लो</string>
+    <string name="choose_from_gallery">गैलरी से चयन करो</string>
+    <string name="enter_number_of_days">दिनों की संख्या दर्ज करें</string>
+    <string name="enter_date">तारीख चुनें</string>
+    <string name="profile">प्रोफ़ाइल</string>
+    <string name="date_of_admission">अस्पताल में भर्ती की तिथि</string>
+    <string name="stay_in_hospital_in_days"> अस्पताल में रहें (दिनों में)</string>
+    <string name="about_us">हमारे बारे में</string>
 </resources>
