Change the Branding of code .swasthya sampark to Intelehealth D2P
change name and logo.

--- a/app/src/main/res/values-hi-rIN/strings.xml
+++ b/app/src/main/res/values-hi-rIN/strings.xml
@@ -2,7 +2,8 @@
 <resources>
     <string name="app_name">InteleSafe</string>
     <string name="intelecare">InteleCare</string>
-    <string name="swasth_sampark">स्वास्थ्य संपर्क</string>
+<!--    <string name="intelehealth_d2p">स्वास्थ्य संपर्क</string>-->
+    <string name="intelehealth_d2p">इंटेलहेल्थ डी२पी</string>
     <string name="splash_desc_text">COVID-19 रोगियों के लिए रिकवरी और पुनर्वास</string>
     <string name="select_language">Select Language</string>
     <string name="accept">स्वीकार</string>
@@ -206,11 +207,11 @@
     <string name="intro_text1_part"> व्यक्तिगत सुरक्षा उपायों और पीपीई उपयोग के बारे में </string>
     <string name="intro_text2_part">स्वयं के स्वास्थ्य की दैनिक निगरानी कर</string>
     <string name="intro1_text1">कोविड से उबरने की राह कठिन हो सकती है, हम यहाँ इस यात्रा में आपकी मदद करने के लिए हैं।</string>
-    <string name="intro1_text2">स्वास्थ्य संपर्क ऐप, राष्ट्रीय स्वास्थ्य मिशन, यूएसएआईडी निष्ठा और झपाईगो  की एक पहल है जो आपको आपके पिछले स्वास्थ्य जीवन स्तर पर लौटने में मदद करती है।</string>
+    <string name="intro1_text2">इंटेलहेल्थ डी२पी  ऐप, राष्ट्रीय स्वास्थ्य मिशन, यूएसएआईडी निष्ठा और झपाईगो  की एक पहल है जो आपको आपके पिछले स्वास्थ्य जीवन स्तर पर लौटने में मदद करती है।</string>
     <string name="intro1_text3">कई व्यक्तियों को कोविड बीमारी होने के बाद कमजोरी, थकान, सांस लेने में तकलीफ, सीने में दर्द, यहां तक ​​कि मानसिक स्वास्थ्य के मुद्दों सहित कई प्रकार के नुकसान/समस्या का सामना करना पड़ता है। कोविड के बाद की जटिलताओं की शीघ्र पहचान और पुनर्वास नैदानिक उपचार प्राप्त करना, ठीक होने की प्रक्रिया और सामान्य जीवन में वापस आने में महत्वपूर्ण भूमिका निभाएगा।</string>
-    <string name="intro2_text1">स्वास्थ्य संपर्क ऐप में आपके स्वास्थ्य सुधार की यात्रा में मदद करने के लिए शिक्षा सामग्री शामिल है, साथ ही आप अनुभवी डॉक्टरों से निःशुल्क टेलीकंसल्टेंशन ले सकते है जिसमे स्त्री रोग विशेषज्ञ, बाल रोग विशेषज्ञ, श्वास-रोग विशेषज्ञ, मेडिसिन, हृदय रोग विशेषज्ञ, नाक कान गला रोग विशेषज्ञ, नेत्र रोग विशेषज्ञ, पुनर्वास फिजियोथेरेपिस्ट, आहार विशेषज्ञ, पोषण सलाहकार, और मनोवैज्ञानिक शामिल है |</string>
+    <string name="intro2_text1">इंटेलहेल्थ डी२पी ऐप में आपके स्वास्थ्य सुधार की यात्रा में मदद करने के लिए शिक्षा सामग्री शामिल है, साथ ही आप अनुभवी डॉक्टरों से निःशुल्क टेलीकंसल्टेंशन ले सकते है जिसमे स्त्री रोग विशेषज्ञ, बाल रोग विशेषज्ञ, श्वास-रोग विशेषज्ञ, मेडिसिन, हृदय रोग विशेषज्ञ, नाक कान गला रोग विशेषज्ञ, नेत्र रोग विशेषज्ञ, पुनर्वास फिजियोथेरेपिस्ट, आहार विशेषज्ञ, पोषण सलाहकार, और मनोवैज्ञानिक शामिल है |</string>
     <string name="intro2_text2">हम आपकी देखभाल में भाग लेने के अवसर की सराहना करते हैं और आपके स्वस्थ होने की कामना करते हैं।</string>
-    <string name="about_swasthya_sampark">स्वास्थ संपर्क के बारे में</string>
+    <string name="about_swasthya_sampark">इंटेलहेल्थ डी२पी के बारे में</string>
 
 
 
