--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
 <!--    <string name="app_name" translatable="false">Swasthya Sampark </string>-->
-    <string name="app_name" translatable="false">Intelehealth D2P </string>
+    <string name="app_name" translatable="false">InteleCare </string>
 
     //Generic
     <string name="generic_the_flipping_word_next" translatable="false">Next</string>
@@ -40,7 +40,7 @@
     <string name="db_patient_id3" translatable="false">patient_identifier3</string>
 
     //Login Screen
-    <string name="title_activity_login" translatable="false">Intelehealth D2P </string>
+    <string name="title_activity_login" translatable="false">InteleCare </string>
     <string name="prompt_email" translatable="false">Username</string>
     <string name="prompt_password" translatable="false">Password*</string>
     <string name="prompt_admin_password" translatable="false">Admin Password</string>
@@ -68,11 +68,11 @@
     <string name="intro_text1_part">learn about personal protection measures and PPE use.</string>
     <string name="intro_text2_part">monitor your own health daily</string>
     <string name="intro1_text1">The road to recovery from COVID-19 can be hard, we are here to help you on this journey.</string>
-    <string name="intro1_text2">The Intelehealth D2P app is an initiative by the National Health Mission, USAID NISHTHA and Jhpiego to help you return to your previous quality life.</string>
+    <string name="intro1_text2">The InteleCare app is an initiative by the National Health Mission, USAID NISHTHA and Jhpiego to help you return to your previous quality life.</string>
     <string name="intro1_text3">Many individuals face a range of impairments after contracting with COVID-19 disease including weakness, fatigue, shortness of breath, chest pain, even mental health issues as well.  Early identification of post COVID complications and getting rehabilitative clinical treatment will play an important role in the recovery process and return to normal life.</string>
-    <string name="intro2_text1">The Intelehealth D2P app contain education materials to help you in your journey to recovery and also get you free access to teleconsultations with our team of experienced doctors and specialists including Gynaecologist, Paediatrician, Pulmonologist, Medicine, Cardiologist, ENT, Ophthalmologist, Rehabilitative Physiotherapist, Dietician, Nutritional counsellor, and Psychologist.</string>
+    <string name="intro2_text1">The InteleCare app contain education materials to help you in your journey to recovery and also get you free access to teleconsultations with our team of experienced doctors and specialists including Gynaecologist, Paediatrician, Pulmonologist, Medicine, Cardiologist, ENT, Ophthalmologist, Rehabilitative Physiotherapist, Dietician, Nutritional counsellor, and Psychologist.</string>
     <string name="intro2_text2">We appreciate the opportunity to participate in your care and with you all the best in your recovery.</string>
-    <string name="about_swasthya_sampark">About Intelehealth D2P</string>
+    <string name="about_swasthya_sampark">About InteleCare</string>
 
     // Sign up
     <string name="title_sign_up" translatable="false">Register</string>
@@ -649,10 +649,10 @@
     <string name="location">Location</string>
     <string name="prajwal_waingankar">Prajwal Waingankar</string>
     <string name="recyclerview_home_date">01 January 2020, 12:00 AM</string>
-    <string name="intelesafe">InteleSafe</string>
+    <string name="InteleCare">InteleCare</string>
     <string name="intelecare">InteleCare</string>
-    <string name="intelehealth_d2p">Intelehealth D2P </string>
-<!--    <string name="swasth_sampark">Intelehealth D2P</string>-->
+    <string name="intelehealth_d2p">InteleCare </string>
+<!--    <string name="swasth_sampark">InteleCare</string>-->
     <string name="splash_desc_text">Recovery &amp; Rehabilitation for \n COVID-19 Patients</string>
     <string name="who_is_this_napplication_for">Who is this \napplication for?</string>
     <string name="submit_visitSummary_Button">Submit</string>
